frontend on yew introduced

--- a/tests/data/index.html
+++ b/tests/data/index.html
@@ -2,6 +2,11 @@
 <html>
 <head>
 <meta charset="utf-8">
+<style>
+.card-deck .card {
+    max-width: calc(25% - 30px);
+}
+</style>
 </head>
 <body>
   <h1>Mock page</h1>
